styles/new-design.css
/*=============== Universal ===============*/

body {
    background-color: rgb(26, 26, 26);
    line-height: 1;
}

h1, h2, p {
    font-family: Montserrat;
    color: white;
    margin: 5px;
}

a {
    text-decoration: none;
}

html {
    scroll-behavior: smooth;
}

.wrapper {
    display: flex;
    flex-direction: column;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5rem;
}

.section {
    text-align: justify;
    width: 600px;
    
}

.navbar {
    display: flex;
    align-items: center;
    margin-bottom: 40px;
    position: sticky;
    top: 0;
    z-index: 100;
    background-color: rgb(38, 38, 38);
    width: 100%;
    height: 80px;
    justify-content: center;
    gap: 11rem;
}

.navbar a {
    text-decoration: none;
}

.space {
    height: 150px;
}

/*=============== Experience / Education ===============*/

.experience {
    display: flex;
    flex-direction: column;
}

.experience-item {
    margin-top: 20px;
}

.employer {
    font-weight: bold;
}

.employment-date, .work-title {
    color: rgb(150, 150, 150);
}

.work-description {
    margin-top: 15px;
}

/*=============== About ===============*/

.about-pic {
    width: 50%; 
    border-radius: 50%;
    float: right;
    margin-left: 30px;
    margin-bottom: 20px;
}

/*=============== Projects ===============*/

.projects {
    margin-top: 50px;
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    overflow: auto;
    align-content: flex-start;
    gap: 1rem;
}

.project-info {
    margin-top: 10px;
    width: 400px;
    height: 400px;
    border-radius: 5px;
    border-width: 1px;
    border-bottom-style: solid;
    border-bottom-left-radius: 0%;
    border-bottom-right-radius: 0%;
    border-color: rgb(54, 54, 54);
    display: flex;
    flex-direction: column;
    overflow: auto;
    align-items: baseline;
    gap: 1rem;
    /*cursor: pointer;*/
}

.project-info h1 {
    font-size: 20px;
}
/*
.project-info:hover {
    background-color: rgb(40, 40, 40);
    transition: background-color 0.3s ease;
}
*/
.tech-showcase {
    margin-top: 20px;
    padding: 5px;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    gap: 1rem;
}



.tech-info {
    width: 65px;
    height: 30px;
    border-radius: 5px;
    border-style: solid;
    border-width: 1px;
    border-color: rgb(64, 64, 64);;
    background-color: rgb(51, 51, 51);
    display: flex;
}

.tech-info p {
    margin: auto;
}

/*=============== Contact ===============*/
.contact {
    margin-top: 20px;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
  }
  
  .sticky + .content {
    padding-top: 60px;
  }

  @media only screen and (max-width: 600px) {

    .section {
        width: 300px;
    }

    
  }

